--- a/Express_online_shop_mongo/views/admin/edit-product.ejs
+++ b/Express_online_shop_mongo/views/admin/edit-product.ejs
@@ -24,7 +24,7 @@
                 <label for="description">Description</label>
                 <textarea name="description" id="description" rows="5"><%=product.description %></textarea>
             </div>
-            <input type="hidden" value="<%=product.id%>" name="productId" id="productId"/>
+            <input type="hidden" value="<%=product._id%>" name="productId" id="productId"/>
             <button class="btn" type="submit">
                 <% if (editing) {%>
                     Update Product
