Add to cart functionalites

--- a/Express_online_shop_mongoose/views/shop/cart.ejs
+++ b/Express_online_shop_mongoose/views/shop/cart.ejs
@@ -11,11 +11,11 @@
                         cartProducts.forEach((item)=>{%>
                 <p>
                         <li>
-                                <%=item.title%> (
+                                <%=item.productId.title%> (
                                 <%=item.quantity%>)
                                 <form action="/cart-delete-item" method="POST">
-                                        <input type="hidden" value="<%=item._id%>" name="productId" />
-                                        <input type="hidden" value="<%=item.price%>" name="price" />
+                                        <input type="hidden" value="<%=item.productId._id%>" name="productId" />
+                                        <input type="hidden" value="<%=item.productId.price%>" name="price" />
                                         <button class="btn" type="submit">Delete</button>
                                 </form>
                         </li>
