--- a/Express_online_shop_mongoose/views/auth/reset.ejs
+++ b/Express_online_shop_mongoose/views/auth/reset.ejs
@@ -10,20 +10,13 @@
         <% if(errorMessage) { %>
         <div><%=errorMessage%></div>
         <% } %>
-        <form class="product-form" action="/login" method="POST">
+        <form class="product-form" action="/reset" method="POST">
             <input type="hidden" name="_csrf" value="<%=csrfToken%>">
             <div class="form-control">
                 <label for="email">E-Mail</label>
                 <input type="email" name="email" id="email">
             </div>
-            <div class="form-control">
-                <label for="password">Password</label>
-                <input type="password" name="password" id="password">
-            </div>
-            <button class="btn" type="submit">Login</button>
+            <button class="btn" type="submit">Reset password</button>
         </form>
-        <div class="centered">
-            <a href="/reset">reset password</a>
-        </div>
     </main>
     <%- include('../includes/end.ejs') %>
