password reset comaplte

--- a/Express_online_shop_mongoose/views/auth/new-password.ejs
+++ b/Express_online_shop_mongoose/views/auth/new-password.ejs
@@ -11,7 +11,8 @@
         <div><%=errorMessage%></div>
         <% } %>
         <form class="product-form" action="/new-password" method="POST">
-            <input type="hidden" name="userId" value="userId">
+            <input type="hidden" name="userId" value="<%=userId%>">
+            <input type="hidden" name="passwordToken" value="<%=passwordToken%>">
             <input type="hidden" name="_csrf" value="<%=csrfToken%>">
             <div class="form-control">
                 <label for="password">Password</label>
