adding validation starts

--- a/Express_online_shop_mongoose/views/auth/signup.ejs
+++ b/Express_online_shop_mongoose/views/auth/signup.ejs
@@ -7,7 +7,10 @@
     <%- include('../includes/navigation.ejs') %>
 
     <main>
-        <form class="product-form" action="/signup" method="POST">
+            <% if(errorMessage) { %>
+                <div><%=errorMessage%></div>
+                <% } %>
+        <form class="product-form" action="/signup" method="POST" novalidate >
             <input type="hidden" name="_csrf" value="<%=csrfToken%>">
             <div class="form-control">
                 <label for="email">E-Mail</label>
