adding iniatial setup for file downlaod

--- a/Express_online_shop_mongoose/views/shop/orders.ejs
+++ b/Express_online_shop_mongoose/views/shop/orders.ejs
@@ -17,7 +17,7 @@
                     <% order.products.forEach(p => { %>
                     <li class="orders__products-item">
                         <%= p.product.title %> (
-                        <%= p.quantity %>)</li>
+                        <%= p.quantity %>) - <a href="">Invoice</a></li>
                     <% }); %>
                 </ul>
             </li>
