--- a/Express_online_shop_mongoose/views/shop/orders.ejs
+++ b/Express_online_shop_mongoose/views/shop/orders.ejs
@@ -11,13 +11,13 @@
             <% orders.forEach(order => { %>
             <li class="orders__item">
                 <h1>Order - #
-                    <%= order._id %>
+                    <%= order._id %>  - <a href="/orders/<%=order._id%>">Invoice</a>
                 </h1>
                 <ul class="orders__products">
                     <% order.products.forEach(p => { %>
                     <li class="orders__products-item">
                         <%= p.product.title %> (
-                        <%= p.quantity %>) - <a href="/orders/<%=order._id%>">Invoice</a></li>
+                        <%= p.quantity %>)</li>
                     <% }); %>
                 </ul>
             </li>
