--- a/Express_online_shop_mongoose/public/css/main.css
+++ b/Express_online_shop_mongoose/public/css/main.css
@@ -159,10 +159,11 @@ form {
 
 .card__image {
   width: 100%;
+  text-align: center;
 }
 
 .card__image img {
-  width: 100%;
+  width: 50%;
 }
 
 .card__actions {
@@ -205,4 +206,9 @@ form {
 
 .centered{
   text-align: center;
+}
+
+.pagination{
+  text-align: center;
+  margin-top: 10px;
 }
