--- a/Express_online_shop_mongoose/views/admin/products.ejs
+++ b/Express_online_shop_mongoose/views/admin/products.ejs
@@ -38,6 +38,7 @@
                             </article>
                             <% } %>
                     </div>
+                    <%- include('../includes/pagination.ejs') %>
                     <% } else { %>
                         <h1>No Products Found!</h1>
                         <% } %>
