--- a/Express_online_shop_mongoose/views/includes/navigation.ejs
+++ b/Express_online_shop_mongoose/views/includes/navigation.ejs
@@ -36,7 +36,7 @@
             <li class="main-header__item">
                 <form action="/logout" method="post">
                     <input type="hidden" name="_csrf" value="<%=csrfToken%>">
-                    <button type="submit">Logout</button>
+                    <button class="btn" type="submit">Logout</button>
                 </form>
             </li>
             <% } %>
