--- a/Express_online_shop_mongoose/views/admin/products.ejs
+++ b/Express_online_shop_mongoose/views/admin/products.ejs
@@ -28,12 +28,9 @@
                                 </div>
                                 <div class="card__actions">
                                     <a href="/admin/edit-product/<%=product._id%>?edit=true" class="btn">Edit</a>
-                                    <form action="/admin/delete-product" method="POST">
-                                        <input type="hidden" name="_csrf" value="<%=csrfToken%>">
-                                        <input type="hidden" id="productId" name="productId" value="<%=product._id%>"/>
-                                        <button class="btn" type="submit">Delete</button>
-                                    </form>
-
+                                    <input type="hidden" name="_csrf" value="<%=csrfToken%>">
+                                    <input type="hidden" id="productId" name="productId" value="<%=product._id%>"/>
+                                    <button class="btn" type="button" onClick="deletProduct(this)">Delete</button>
                                 </div>
                             </article>
                             <% } %>
